# beyond-pattern-matching

./: .gitignore  CITATION.cff  LICENSE  README.md  compare_all_methods.py  debug_exploration.py  pyproject.toml
primitive-evolution/blog_demos/: 01_brainfuck_introduction.py  02_evolutionary_framework.py  02_experimental_setup.py  03_escaping_the_swamp.py  03_task_progression.py  04_genome_repository_and_macros.py  05_macro_accelerated_evolution.py  06_visualization_and_analysis.py  README.md  bf_macro_discovery.py  brainfuck.py  brainfuck_debugger.py  brainfuck_evolution.py  create_hierarchical_test_data.py  genome_repository.backup.json  genome_repository.py  hierarchical_test_winners.json  lexicase_selection.py  motif_evolution.py  staged_fitness.py
primitive-evolution/blog_demos/core/: __init__.py  bf_runner.py  eval_utils.py  evo.py  fitness.py  grammar_updater.py  hierarchical_miner.py  miner_l1.py  miner_l2.py
primitive-evolution/blog_demos/docs/: MULTILEVEL_IMPLEMENTATION.md
primitive-evolution/blog_demos/experiments/: __init__.py  config.yaml  evolve_baseline.py  evolve_with_cfg.py  evolve_with_hierarchical_motifs.py  evolve_with_mined_motifs.py  evolve_with_mined_motifs_updated.py
primitive-evolution/blog_demos/motifs/: __init__.py  enriched_2_cfg.json  enriched_4_cfg_rewrite_cfg.json  enriched_cfg.json  enriched_h_cfg.json  loop_cfg.json  (+3 more)
primitive-evolution/docs/: HIERARCHICAL_MOTIF_DISCOVERY.md  README_motif_experiments.md
turing-completeness/: improved_parallel_multiplication.py  robust_result_extractor.py  simple_parallel_multiplication.py
(+54 files in other folders)
